Fixed some layout problems and added new routes to livecode

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,13 +88,22 @@ input {
   left: 0%;
 }
 
-.documentButtons {
-  list-style-type: none;
-  float:right;
+.sidebar {
+  padding: 10px;
+  position: absolute;
+  top: 60px;
+  right: 0%;
+  left: 80%;
+  bottom: 0%;
 }
 
-.liveCodeMenu{
-  margin-right: 46px;  
+.sidebar > ul {
+  list-style-type: none;
+}
+
+.findUsers > input {
+  width: 100%;
+  margin: 0 auto;
 }
 
 .foundUsers {
@@ -106,7 +115,7 @@ input {
   border-radius: 10px;
   margin-top: 0px;
   margin-bottom: 0px;
-  width: 147px;
+  width: 100%;
   height: 38px;
 }
 
